Remove Lovable branding and add custom OG meta tags

--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IELTS Fluent AI - Master Speaking with AI Coach</title>
     <meta name="description" content="Practice IELTS speaking with AI examiner, get instant band scores, and improve faster. Join thousands of successful IELTS candidates." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="IELTS Fluent AI" />
 
-    <meta property="og:title" content="ielts-fluent-ai" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://speak-ai-xi.vercel.app/" />
+    <meta property="og:title" content="IELTS Fluent AI - Master Speaking with AI Coach" />
+    <meta property="og:description" content="Practice IELTS speaking with AI examiner. Get instant feedback, improve your band score, and ace your exam. Free practice available!" />
+    <meta property="og:image" content="https://speak-ai-xi.vercel.app/og-image.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:url" content="https://speak-ai-xi.vercel.app/" />
+    <meta name="twitter:title" content="IELTS Fluent AI - Master Speaking with AI Coach" />
+    <meta name="twitter:description" content="Practice IELTS speaking with AI examiner. Get instant feedback, improve your band score, and ace your exam." />
+    <meta name="twitter:image" content="https://speak-ai-xi.vercel.app/og-image.png" />
   </head>
 
   <body>
