--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎤</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IELTS Fluent AI - Master Speaking with AI Coach</title>
     <meta name="description" content="Practice IELTS speaking with AI examiner, get instant band scores, and improve faster. Join thousands of successful IELTS candidates." />
